# gastro-ed

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  SPEC.md  amvera.yml  docker-compose.yml  next.config.ts  package-lock.json  package.json  railway.toml  vercel.json
backend/: .env.example  .gitignore  Dockerfile  Procfile  README.md  pyproject.toml
backend/app/: __init__.py  cli.py  config.py  exceptions.py  health.py  main.py
backend/app/auth/: jwt.py
backend/app/db/: supabase_client.py
backend/app/middleware/: logging.py  rate_limit.py
backend/app/models/: ai.py  analytics.py  readiness.py  sync.py
backend/app/routers/: ai.py  analytics.py  answers.py  readiness.py
backend/app/services/: ai_client.py  analytics.py  answers_store.py  prebuilt_store.py  prompts.py  readiness.py
backend/app/workers/: ai_pipeline.py  run_worker.py
backend/tests/: conftest.py  test_ai_client.py  test_ai_pipeline.py  test_ai_router.py  test_analytics.py  test_analytics_router.py  test_answers_router.py  test_answers_store.py  test_auth.py  test_auth_es256.py  test_config_validation.py  test_exceptions.py  test_health.py  test_health_ready.py  test_middleware_logging.py  test_prebuilt_store.py  test_prompts.py  test_rate_limit.py  test_readiness.py  test_readiness_router.py
public/: manifest.json  sw.js
scripts/: ax_scraper.py  classify-cards.ts  export-pending-batches.ts  import-test-images.ts  import-test-questions.ts  prebuild-content.ts  upsert-results.ts
skills/wiki-ingest/: skill.md
skills/wiki-lint/: skill.md
wiki/: index.md  log.md  schema.md
(+781 files in other folders)
